@@ -1,0 +1,72 @@
+.editor-field {
+  position: relative;
+  width: 100%;
+
+  .editor-toolbar {
+    background-color: $secondaryBgColor;
+    border: 1px solid $borderColor;
+    border-radius: 5px;
+    box-shadow: 0 20px 30px 0 rgba(33,55,74,0.1);
+    display: inline-flex;
+    left: 20%;
+    opacity: 0;
+    padding: 0.35rem;
+    position: absolute;
+    top: -3.3rem;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+    visibility: hidden;
+    z-index: 1050;
+
+    &:after {
+      border: 0.5rem solid;
+      border-color: $secondaryBgColor transparent transparent;
+      content: ' ';
+      height: 0;
+      left: 20%;
+      position: absolute;
+      top: 2.4rem;
+      width: 0;
+    }
+
+    &:before {
+      border: 0.5rem solid;
+      border-color: $borderColor transparent transparent;
+      content: ' ';
+      height: 0;
+      left: 20%;
+      position: absolute;
+      top: 2.5rem;
+      width: 0;
+    }
+
+    .editor-btn {
+      align-items: center;
+      background-color: transparent;
+      border: 1px solid transparent;
+      border-radius: 5px;
+      color: darken($defaultText, 5%);
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      width: 1.75rem;
+      padding: 0.35rem;
+      transition: all 0.2s ease-in-out;
+
+      &.disabled {
+        pointer-events: none;
+      }
+
+      &:hover {
+        background-color: $primaryBgColor;
+        border-color: $borderColor;
+      }
+    }
+  }
+
+  .editor-toolbar:hover,
+  textarea:focus + .editor-toolbar {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.3s 0.2s ease-in-out;
+  }
+}
