@@ -12,6 +12,7 @@
 @import "tylium/variables";
 
 // shared styles
+@import "shared/editor_toolbar";
 @import "shared/items_table";
 @import "shared/mixins";
 @import "shared/noscript";
