@@ -1,4 +1,5 @@
 v3.17 (Month 2020)
+  * Added formatting toolbar
   * Adjusted Uploads layout to provide more visibility to the output console
   * Card improvements:
     - Activity Feed now shows board name and link
